--- a/index.html
+++ b/index.html
@@ -2,8 +2,11 @@
 <html lang="zh-CN">
 <head>
 <meta charset="UTF-8">
-<title>天津市专业技术人员继续教育网（证书查询）</title>
+<title>登录页</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
+
+<!-- favicon -->
+<link rel="icon" type="image/png" href="favicon.png">
 
 <style>
     * {
@@ -18,10 +21,40 @@
         color: #000;
     }
 
+    /* 左上角导航条 */
+    .topbar {
+        width: 100%;
+        background: #3b3b3b;
+        color: #fff;
+        padding: 10px 20px;
+        display: flex;
+        align-items: center;
+        gap: 8px;
+    }
+
+    .topbar img {
+        height: 28px; /* favicon 图标高度 */
+    }
+
+    .topbar span {
+        font-size: 18px;
+        color: #ffffff;
+    }
+
+    /* 页面主体 */
     .container {
         max-width: 900px;
         margin: 32px auto;
         padding: 0 24px;
+        display: none; /* 初始隐藏，参数正确后显示 */
+    }
+
+    .error {
+        text-align: center;
+        padding: 100px 20px;
+        font-size: 18px;
+        color: red;
+        display: none;
     }
 
     /* 标题部分 */
@@ -32,15 +65,10 @@
         line-height: 1.4;
     }
 
-    .title-bold {
-        font-weight: 600;
-    }
+    .title-bold { font-weight: 600; }
+    .title-normal { font-weight: normal; }
 
-    .title-normal {
-        font-weight: normal;
-    }
-
-    /* 每行采用两列结构，左列固定宽度 */
+    /* 两列布局 */
     .line {
         display: flex;
         font-size: 16px;
@@ -48,7 +76,7 @@
     }
 
     .label {
-        width: 110px;       /* 固定宽度 = 完全对齐 */
+        width: 110px;
         color: #0076c8;
         font-weight: bold;
         flex-shrink: 0;
@@ -60,55 +88,53 @@
 
     .value-red {
         color: #d70000;
-        font-weight: normal; /* 不加粗 */
+        font-weight: normal;
     }
 </style>
 </head>
+
 <body>
 
-<div class="container">
+<!-- 顶部导航 -->
+<div class="topbar">
+    <img src="favicon.png" alt="logo">
+    <span>登录页</span>
+</div>
+
+<!-- 错误提示 -->
+<div class="error" id="errBox">无权限访问（缺少或错误的 user_name 参数）</div>
+
+<!-- 主体内容 -->
+<div class="container" id="mainBox">
 
     <div class="title">
         <span class="title-bold">天津市专业技术人员继续教育网</span>
         <span class="title-normal">（证书查询）</span>
     </div>
 
-    <div class="line">
-        <span class="label">用户名：</span>
-        <span class="value">Sunming</span>
-    </div>
-
-    <div class="line">
-        <span class="label">真实姓名：</span>
-        <span class="value">孙明</span>
-    </div>
-
-    <div class="line">
-        <span class="label">身份证号：</span>
-        <span class="value">12010719820102218X</span>
-    </div>
-
-    <div class="line">
-        <span class="label">所属组织：</span>
-        <span class="value">天津市塘沽区第一中学</span>
-    </div>
-
-    <div class="line">
-        <span class="label">工作单位：</span>
-        <span class="value">塘沽一中初中校区</span>
-    </div>
-
-    <div class="line">
-        <span class="label">培训计划：</span>
-        <span class="value">2019年天津市专技人员继续教育公需课</span>
-    </div>
-
-    <div class="line">
-        <span class="label">培训结果：</span>
-        <span class="value-red">您已获得10学时，其中必修课10学时！</span>
-    </div>
+    <div class="line"><span class="label">用户名：</span><span class="value">Sunming</span></div>
+    <div class="line"><span class="label">真实姓名：</span><span class="value">孙明</span></div>
+    <div class="line"><span class="label">身份证号：</span><span class="value">12010719820102218X</span></div>
+    <div class="line"><span class="label">所属组织：</span><span class="value">天津市塘沽区第一中学</span></div>
+    <div class="line"><span class="label">工作单位：</span><span class="value">塘沽一中初中校区</span></div>
+    <div class="line"><span class="label">培训计划：</span><span class="value">2019年天津市专技人员继续教育公需课</span></div>
+    <div class="line"><span class="label">培训结果：</span><span class="value-red">您已获得10学时，其中必修课10学时！</span></div>
 
 </div>
+
+<!-- 参数校验脚本 -->
+<script>
+    const params = new URLSearchParams(window.location.search);
+    const userName = params.get("user_name");
+
+    const allowedUser = "Sunming";
+
+    if (userName === allowedUser) {
+        document.getElementById("mainBox").style.display = "block";
+    } else {
+        document.getElementById("errBox").style.display = "block";
+    }
+</script>
 
 </body>
 </html>
