--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <title>登录页</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<!-- favicon -->
+<!-- favicon 图标 -->
 <link rel="icon" type="image/png" href="favicon.png">
 
 <style>
@@ -21,27 +21,6 @@
         color: #000;
     }
 
-    /* 左上角导航条 */
-    .topbar {
-        width: 100%;
-        background: #3b3b3b;
-        color: #fff;
-        padding: 10px 20px;
-        display: flex;
-        align-items: center;
-        gap: 8px;
-    }
-
-    .topbar img {
-        height: 28px; /* favicon 图标高度 */
-    }
-
-    .topbar span {
-        font-size: 18px;
-        color: #ffffff;
-    }
-
-    /* 页面主体 */
     .container {
         max-width: 900px;
         margin: 32px auto;
@@ -65,10 +44,10 @@
         line-height: 1.4;
     }
 
-    .title-bold { font-weight: 600; }
-    .title-normal { font-weight: normal; }
+    .title-bold { font-weight: 600; }   /* “天津市专业技术人员继续教育网” 加粗 */
+    .title-normal { font-weight: normal; } /* “（证书查询）” 不加粗 */
 
-    /* 两列布局 */
+    /* 两列布局，左字段固定宽度 */
     .line {
         display: flex;
         font-size: 16px;
@@ -88,23 +67,17 @@
 
     .value-red {
         color: #d70000;
-        font-weight: normal;
+        font-weight: normal; /* 不加粗 */
     }
 </style>
 </head>
 
 <body>
 
-<!-- 顶部导航 -->
-<div class="topbar">
-    <img src="favicon.png" alt="logo">
-    <span>登录页</span>
-</div>
-
-<!-- 错误提示 -->
+<!-- 错误提示（参数不对时显示） -->
 <div class="error" id="errBox">无权限访问（缺少或错误的 user_name 参数）</div>
 
-<!-- 主体内容 -->
+<!-- 主体内容（参数正确才显示） -->
 <div class="container" id="mainBox">
 
     <div class="title">
@@ -122,11 +95,10 @@
 
 </div>
 
-<!-- 参数校验脚本 -->
+<!-- 参数校验脚本：必须 user_name=Sunming 才显示页面 -->
 <script>
     const params = new URLSearchParams(window.location.search);
     const userName = params.get("user_name");
-
     const allowedUser = "Sunming";
 
     if (userName === allowedUser) {
